fix chktex problems

--- a/notes.tex
+++ b/notes.tex
@@ -29,7 +29,7 @@
     in which all terms after the first two are abelian groups, the maps being then group homomorphisms.
     Moreover we have an isomorphism 
     \[[S^n X, S^n Y]\to[S^{n+1} X, S^{n+1} Y]\]
-    if $n+2$(connectivity $Y$)$\geq\dim X$\dots
+    if $n+2(\text{connectivity of }Y)\geq\dim X$\dots
 \end{definition}\cite[p.1]{atiyah}
 
 \begin{definition}[Manifold]\marginnote{Beginning of Br\"ocker, chapter 1, Difftopo. From here, many things are known from AnaGeo}
@@ -40,7 +40,7 @@
 
 \begin{definition}[Tangent space]
   The \demph{tangent vectors} of a manifold $M^n$ form an $n$-dimensional smooth vector bundle $\pi:TM^n\to M^n$, the \demph{tangent bundle} of $M^n$.
-  The \demph{fibre} $T_xM$ of $TM$ over $x\in M$ is isomorphism to $\mathbb{R}^n$.
+  The \demph{fibre} $T_x M$ of $TM$ over $x\in M$ is isomorphism to $\mathbb{R}^n$.
 \end{definition}\cite[p.1]{brocker}
 
 \begin{definition}[Differential]\marginnote{Br\"ocker writes $Tf$, but I'll stick to C\^ot\'e's notation.}
@@ -84,7 +84,7 @@ We know by Whitney, that a manifold of dimension $n$ can be embedded in $\mathbb
   Let now $f:M\to\R^p$ be an embedding. For $f$, there is a \demph{normal bundle} $\nu_f:E(\nu_f)\to M$ of $f$.
 \end{definition}\cite[p.2]{brocker}
 
-Considering $M$ as a subset of $\R^p$ by $f$, the fibre of $\nu_f$ over $x\in M$ consists of the vectors $v\in\R^p$, which (w.r.t. the standard scalar product on $\R^p$), that are in $x$ orthogonal to $M$.
+Considering $M$ as a subset of $\R^p$ by $f$, the fibre of $\nu_f$ over $x\in M$ consists of the vectors $v\in\R^p$, which (w.r.t.\ the standard scalar product on $\R^p$), that are in $x$ orthogonal to $M$.
 
 
 The \demph{Whitney sum}\marginnote{Definition needed!} $\nu_f\oplus\pi$ of $\nu_f$ and the tangent bundle is trivial of dimension $p$ over $M$, as it is the restriction of the trivial bundle $T\R$ on $M^n$, 
@@ -102,7 +102,7 @@ The \demph{Whitney sum}\marginnote{Definition needed!} $\nu_f\oplus\pi$ of $\nu_
 \end{proof}
 
 
-\newpage\printbibliography
+\newpage\printbibliography%
 
 
 
