outline of the thesis

--- a/sources.bib
+++ b/sources.bib
@@ -7,10 +7,15 @@
   year = {1960}
 }
 
-@book{brocker,
-  author = {Theodor Br\"ocker and Tammo tom Dieck},
-  editor = {A. Dold and B. Eckmann},
-  publisher = {Springer},
-  title = {Kobordismentheorie},
-  year = {1970}
+@book{brocker
+AUTHOR = {Br\"ocker, Theodor and tom Dieck, Tammo},
+ TITLE = {Kobordismentheorie},
+SERIES = {Lecture Notes in Mathematics},
+VOLUME = {Vol. 178},
+PUBLISHER = {Springer-Verlag, Berlin-New York},
+  YEAR = {1970},
+ PAGES = {xvi+191},
+MRCLASS = {57.10 (55.00)},
+MRNUMBER = {275446},
+MRREVIEWER = {P.\ S.\ Landweber},
 }
