bibliography and more outline

--- a/preamble.tex
+++ b/preamble.tex
@@ -9,7 +9,7 @@
 \usepackage{geometry}
 \usepackage[english, ngerman]{babel}
 \usepackage{csquotes}
-\usepackage[backend=biber, style=numeric, sorting=none]{biblatex}
+\usepackage[backend=biber, style=alphabetic, sorting=nty]{biblatex}
 \usepackage{BA_Titelseite}
 
 %Namen des Verfassers der Arbeit
