--- a/sources.bib
+++ b/sources.bib
@@ -1,21 +1,86 @@
-@article{atiyah,
-  author = {M. F. Atiyah},
-  journal = {},
-  number = {200},
-  title = {Bordism and Cobordism},
-  volume = {},
-  year = {1960}
+@article {atiyah,
+    AUTHOR = {Atiyah, M. F.},
+     TITLE = {Bordism and cobordism},
+   JOURNAL = {Proc. Cambridge Philos. Soc.},
+  FJOURNAL = {Proceedings of the Cambridge Philosophical Society},
+    VOLUME = {57},
+      YEAR = {1961},
+     PAGES = {200--208},
+      ISSN = {0008-1981},
+   MRCLASS = {57.10},
+  MRNUMBER = {126856},
+MRREVIEWER = {A.\ Dold},
+       DOI = {10.1017/s0305004100035064},
+       URL = {https://doi.org/10.1017/s0305004100035064},
 }
 
-@book{brocker
-AUTHOR = {Br\"ocker, Theodor and tom Dieck, Tammo},
- TITLE = {Kobordismentheorie},
-SERIES = {Lecture Notes in Mathematics},
-VOLUME = {Vol. 178},
-PUBLISHER = {Springer-Verlag, Berlin-New York},
-  YEAR = {1970},
- PAGES = {xvi+191},
-MRCLASS = {57.10 (55.00)},
-MRNUMBER = {275446},
+@book {brocker,
+    AUTHOR = {Br\"ocker, Theodor and tom Dieck, Tammo},
+     TITLE = {Kobordismentheorie},
+    SERIES = {Lecture Notes in Mathematics},
+    VOLUME = {Vol. 178},
+ PUBLISHER = {Springer-Verlag, Berlin-New York},
+      YEAR = {1970},
+     PAGES = {xvi+191},
+   MRCLASS = {57.10 (55.00)},
+  MRNUMBER = {275446},
 MRREVIEWER = {P.\ S.\ Landweber},
+}
+
+@book {lee,
+    AUTHOR = {Lee, John M.},
+     TITLE = {Introduction to smooth manifolds},
+    SERIES = {Graduate Texts in Mathematics},
+    VOLUME = {218},
+   EDITION = {Second},
+ PUBLISHER = {Springer, New York},
+      YEAR = {2013},
+     PAGES = {xvi+708},
+      ISBN = {978-1-4419-9981-8},
+   MRCLASS = {58-01 (53-01 57-01)},
+  MRNUMBER = {2954043},
+}
+
+@article {thom,
+    AUTHOR = {Thom, Ren\'e},
+     TITLE = {Quelques propri\'et\'es globales des vari\'et\'es
+              diff\'erentiables},
+   JOURNAL = {Comment. Math. Helv.},
+  FJOURNAL = {Commentarii Mathematici Helvetici},
+    VOLUME = {28},
+      YEAR = {1954},
+     PAGES = {17--86},
+      ISSN = {0010-2571,1420-8946},
+   MRCLASS = {56.0X},
+  MRNUMBER = {61823},
+MRREVIEWER = {W.\ S.\ Massey},
+       DOI = {10.1007/BF02566923},
+       URL = {https://doi.org/10.1007/BF02566923},
+}
+
+@book {hatcher,
+    AUTHOR = {Hatcher, Allen},
+     TITLE = {Algebraic topology},
+ PUBLISHER = {Cambridge University Press, Cambridge},
+      YEAR = {2002},
+     PAGES = {xii+544},
+      ISBN = {0-521-79160-X; 0-521-79540-0},
+   MRCLASS = {55-01 (55-00)},
+  MRNUMBER = {1867354},
+MRREVIEWER = {Donald\ W.\ Kahn},
+}
+
+@book {dieck,
+    AUTHOR = {tom Dieck, Tammo},
+     TITLE = {Algebraic topology},
+    SERIES = {EMS Textbooks in Mathematics},
+ PUBLISHER = {European Mathematical Society (EMS), Z\"urich},
+      YEAR = {2008},
+     PAGES = {xii+567},
+      ISBN = {978-3-03719-048-7},
+   MRCLASS = {55-01},
+  MRNUMBER = {2456045},
+MRREVIEWER = {Donald\ M.\ Davis},
+       DOI = {10.4171/048},
+       URL = {https://doi.org/10.4171/048},
 }
