--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,11pt]{article}
 \input{preamble.tex}
+
 \addbibresource{sources.bib}
 
 \begin{document}
@@ -25,7 +26,17 @@ The problem with these groups is that they are generally hard to compute, even f
 For example, the homotopy groups of spheres are not known in general.
 The general idea of bordism is to replace the \(n\)-sphere with a manifold of dimension \(n\) and to consider the homotopy classes of maps from this manifold to a space \(X\).
 
+Testing citations:\cite{atiyah},\cite{brocker}, \cite{thom}, \cite{lee}, \cite{hatcher}, \cite{dieck}
+
 \section{Basic Definitions}
+
+Maybe I will split this definition into topological manifold, top. manifold with boundary, smooth manifold, smooth manifold with boundary..
+
+\begin{remark}
+    One could equivalently replace the condition of being second countable with the condition of being paracompact.
+    \[\text{second countable}\iff\text{paracompact and countably many connected components}\]
+\end{remark}
+Maybe I will add a definition of paracompactness later.
 
 \begin{definition}[Manifold]
     A \demph{smooth manifold with boundary} \(M=(M,[\mathcal{A}])\) is the data of a topological space \(M\) and an equivalence class \([\mathcal{A}]\) of smooth atlases such that:
@@ -35,6 +46,10 @@ The general idea of bordism is to replace the \(n\)-sphere with a manifold of di
         \item \(\mathcal{A}\) is locally finite.
     \end{itemize}
 \end{definition}
+
+\begin{remark}
+    While being a topological manifold is just a property of the topological space \(M\), begin a smooth manifold gives the manifold extra structure.
+\end{remark}
 
 \begin{remark}
     In this thesis, with \emph{manifold} we will always mean a smooth manifold with boundary.
@@ -51,6 +66,10 @@ The general idea of bordism is to replace the \(n\)-sphere with a manifold of di
     The standard \(n\)-disk is denoted by \(D^n\) and the standard \((n-1)\)-sphere is denoted by \(S^{n-1}\).
 \end{example}
 
+\begin{remark}
+    The boundary of an \(n\)-dimensional manifold is an \((n-1)\)-dimensional submanifold.
+\end{remark}
+
 \begin{nonex}
     Line with two origins
 \end{nonex}
@@ -58,6 +77,8 @@ The general idea of bordism is to replace the \(n\)-sphere with a manifold of di
 The problem with working with manifolds is that they are hard to classify up to homeomorphism or diffeomorphism.
 
 \section{Bordism}
+
+\subsection{unoriented bordism}
 
 \begin{definition}[Singular manifold]
 \end{definition}
@@ -105,11 +126,31 @@ Observe the similarity with the definition of singular homology groups.
 \begin{definition}[graded bordism ring]
 \end{definition}
 
+\subsection{The Eilenberg-Steenrod Axioms}
+The Eilenberg-Steenrod axioms are a set of axioms that characterize the homology and cohomology theories.
+
+We will now calculate the bordism groups.
+
+\subsection{oriented bordism}
+
+\begin{definition}[vector bundle]
+\end{definition}
+
+\begin{definition}[orientable]
+\end{definition}
+
+\begin{definition}[bordant]
+\end{definition}
+
+\begin{definition}[oriented bordism group]
+\end{definition}
 
 \section{Cobordism}
 
 classifying spaces, Thom spaces, Thom isomorphism, Thom class, Thom isomorphism theorem
 
 \section{Pontryagin-Thom Construction}
+
+\newpage\printbibliography%
 
 \end{document}
