--- a/sources.bib
+++ b/sources.bib
@@ -84,3 +84,11 @@ MRREVIEWER = {Donald\ M.\ Davis},
        DOI = {10.4171/048},
        URL = {https://doi.org/10.4171/048},
 }
+
+@book {lueck,
+    AUTHOR = {L\"uck, Wolfgang},
+     TITLE = {Algebraische Topologie Homologie und Mannigfaltigkeiten},
+ PUBLISHER = {vieweg},
+      YEAR = {2005},
+      ISBN = {978-3-528-03218-0},
+}
