--- a/preamble.tex
+++ b/preamble.tex
@@ -46,6 +46,7 @@
 \newtheorem{corollary}[definition]{Corollary}
 \newtheorem*{example}{Example}
 \newtheorem*{nonex}{Non-example}
+\newtheorem*{observation}{Observation}
 
 
 \newcommand{\demph}[1]{{\underline{{\textbf{#1}}}}}
