--- a/sources.bib
+++ b/sources.bib
@@ -92,3 +92,10 @@ MRREVIEWER = {Donald\ M.\ Davis},
       YEAR = {2005},
       ISBN = {978-3-528-03218-0},
 }
+
+@book{luck,
+  title={Algebraische Topologie: Homologie und Mannigfaltigkeiten},
+  author={L{\"u}ck, Wolfgang},
+  year={2012},
+  publisher={Springer-Verlag}
+}
